@startuml
package "UI" {
    class LoginActivity {
        + onCreate()
        + login(email: String, password: String)
    }

    class RegisterActivity {
        + onCreate()
        + register()
    }

    class MainActivity {
        + onCreate()
        + showMenu()
        + logout()
    }

    class AddActivity {
        + onCreate()
        + addActivity(day: String, time: String, subject: String)
    }

    class CalendarActivity {
        + onCreate()
        + showTasks()
    }

    class CurrentTasksActivity {
        + onCreate()
        + showCurrentTasks()
    }

    LoginActivity --> RegisterActivity
    LoginActivity --> MainActivity
    MainActivity --> AddActivity
    MainActivity --> CalendarActivity
    MainActivity --> CurrentTasksActivity
}

package "Model" {
    class Usuario {
        + id: String
        + nombre: String
        + correo: String
        + rol: String
        + ubicacionActual: Ubicacion
        + idCredenciales: String
        + esAdministrador(): Boolean
    }

    class Credenciales {
        + id: String
        + contrasena: String
    }

    class Ubicacion {
        + id: int
        + latitud: double
        + longitud: double
        + direccion: String
    }

    class Actividad {
        + id: int
        + dia: String
        + hora: String
        + asignatura: String
    }
}

package "Repository" {
    class FirebaseHandler {
        + guardarUsuario(usuario: Usuario, onComplete: OnCompleteListener<Void>)
        + obtenerUsuario(id: String, listener: OnCompleteListener<DocumentSnapshot>)
        + eliminarUsuario(id: String)
        + guardarCredenciales(credenciales: Credenciales, onComplete: OnCompleteListener<Void>)
        + obtenerUsuarioPorCorreo(email: String, listener: OnCompleteListener<QuerySnapshot>)
        + obtenerCredenciales(idCredenciales: String, listener: OnCompleteListener<DocumentSnapshot>)
        + autenticarUsuario(email: String, password: String, onComplete: OnCompleteListener<AuthResult>)
    }
}

package "Database" {
    class RoomDatabaseHelper {
        + saveActivity(day: String, time: String, subject: String)
        + getActivity(day: String, time: String): Actividad
        + getTasksByDay(day: String): List<Actividad>
        + getCurrentTask(hour: String): Actividad
    }
}

MainActivity --> FirebaseHandler
LoginActivity --> FirebaseHandler
RegisterActivity --> FirebaseHandler
FirebaseHandler --> Usuario
FirebaseHandler --> Credenciales
FirebaseHandler --> Ubicacion
MainActivity --> RoomDatabaseHelper
AddActivity --> RoomDatabaseHelper
CalendarActivity --> RoomDatabaseHelper
CurrentTasksActivity --> RoomDatabaseHelper
RoomDatabaseHelper --> Actividad
@enduml
